[metadata]
name = ml_training_utils
version = 0.1.0
author = Sagi Nathan
author_email = noreply@example.com
description = Comprehensive utilities for ML experiment tracking and management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sagina/ml_training_utils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.8.0
    numpy>=1.19.0
    pandas>=1.2.0
    matplotlib>=3.3.0
    plotly>=5.0.0
    tqdm>=4.45.0